--- a/src/views/tools/extensions/measures/style.scss
+++ b/src/views/tools/extensions/measures/style.scss
@@ -15,7 +15,7 @@
 			background-color: #009bff;
 			border-style: solid;
 			border-width: 2px;
-			border-color: #fff;
+			border-color: transparent;
 			border-radius: 100%;
 			.PointXYZ{
 				position: absolute;
@@ -23,6 +23,13 @@
 				left: 50%;
 				transform: translate(-50%,0);
 				width: 100px;
+				border-radius: 10px;
+				overflow: hidden;
+				box-sizing: border-box;
+				background: transparent;
+				border-width: 2px;
+				border-style: solid;
+				border-color: transparent;
 				.Point{
 					display: flex;
 					height: 26px;
@@ -31,15 +38,12 @@
 					width: 100%;
 					box-shadow: 0 2px 5px 0 #182a3d;
 					box-sizing: border-box;
-					border-radius: 10px;
 					.Span{
 						color: #ffffff;
 						padding: 0 5px;
-						border-radius: 10px 0 0 10px;
 					}
 					.Text{
 						padding: 0 8px;
-						border-radius: 0 10px 10px 0;
 						background: #ffffff;
 						flex: 1;
 					}
@@ -71,6 +75,17 @@
 			}
 		}
 	}
+	.Actived{
+		.ItemContain{
+			border-width: 3px;
+			border-color: #ffffff;
+			.PointXYZ{
+				border-width: 3px;
+				background: #009bff;
+				border-color: #009bff;
+			}
+		}
+	}
 }
 
 #MeasureLine{//测量距离的样式
@@ -94,17 +109,20 @@
 		 {
 			color: white;
 			background: dodgerblue;
-			height: 20px;
+			height: 24px;
 			width: 100px;
 			border-radius: 8px;
 			margin-left: -50px;
 			margin-top: -10px;
-			padding: 3px;
-			padding-top: 6px;
 			text-align: center;
 			box-shadow: 0px 1px 3px 1px rgb(0 0 0 / 25%);
 			z-index: 3;
 			cursor:pointer;
+			border-width: 2px;
+			border-style: solid;
+			border-color: transparent;
+			box-sizing: border-box;
+			line-height: 24px;
 		}
 		.dom_text :hover{
 			box-shadow: 1px 2px 6px 2px rgb(0 0 0 / 80%);
@@ -120,7 +138,7 @@
 			background-color: #009bff;
 			border-style: solid;
 			border-width: 2px;
-			border-color: #fff;
+			border-color: transparent;
 			border-radius: 100px;
 			box-shadow: 0 2px 5px 0 #182a3d;
 			z-index: 2;
@@ -130,6 +148,16 @@
 	.LineFinal{
 		.dom_start,.dom_end,.dom_line,.dom_text {
 			pointer-events: auto !important;
+		}
+	}
+	.Actived{
+		.dom_text{
+			border-width: 3px;
+			border-color: #ffffff;
+		}
+		.dom_start,.dom_end{
+			border-width: 3px;
+			border-color: #ffffff;
 		}
 	}
 }
