--- a/src/views/tools/style/MobileStyle/FirstPersonRoaming.scss
+++ b/src/views/tools/style/MobileStyle/FirstPersonRoaming.scss
@@ -266,6 +266,12 @@
 	width: 100%;
 	height: auto;
 	box-sizing: border-box;
+	-webkit-touch-callout:none;
+	-webkit-user-select:none;
+	-khtml-user-select:none;
+	-moz-user-select:none;
+	-ms-user-select:none;
+	user-select:none;
 	.containCircle{
 		height: auto;
 		width: 100%;
@@ -348,6 +354,12 @@
 		width: 100%;
 		height: auto;
 		box-sizing: border-box;
+		-webkit-touch-callout:none;
+		-webkit-user-select:none;
+		-khtml-user-select:none;
+		-moz-user-select:none;
+		-ms-user-select:none;
+		user-select:none;
 		.containCircle{
 			height: auto;
 			width: 100%;
