--- a/src/views/tools/style/MobileStyle/RenderSetDialog.scss
+++ b/src/views/tools/style/MobileStyle/RenderSetDialog.scss
@@ -58,6 +58,27 @@
         padding: 5px 0;
       }
   
+      .input_number_contain{
+        display: flex;
+        .inputtext{
+          margin: 0 5px;
+          width: fit-content;
+          text-align: center;
+          display: flex;
+          align-items: center;
+        }
+        .Btn_Contain{
+          border: 1px solid #aaaaaa;
+          display: flex;
+          align-items: center;
+          color: #666666;
+          svg{
+            width: 16px;
+            height: 16px;
+          }
+        }
+      }
+  
   
       .Bg-Color-List{
         display: flex;
@@ -187,6 +208,26 @@
           padding: 5px 0;
         }
   
+        .input_number_contain{
+          display: flex;
+          .inputtext{
+            margin: 0 5px;
+            width: fit-content;
+            text-align: center;
+            display: flex;
+            align-items: center;
+          }
+          .Btn_Contain{
+            border: 1px solid #aaaaaa;
+            display: flex;
+            align-items: center;
+            color: #666666;
+            svg{
+              width: 16px;
+              height: 16px;
+            }
+          }
+        }
   
         .Bg-Color-List{
           display: flex;
