--- a/src/views/tools/style/MobileStyle/minMap.scss
+++ b/src/views/tools/style/MobileStyle/minMap.scss
@@ -8,6 +8,12 @@
 	border-radius: 50%;
 	text-align: center;
 	transform: translateX(-50%) translateY(-50%);
+	-webkit-touch-callout:none;
+	-webkit-user-select:none;
+	-khtml-user-select:none;
+	-moz-user-select:none;
+	-ms-user-select:none;
+	user-select:none;
 }
 
 /* 可视范围 */
@@ -19,6 +25,12 @@
 	position: absolute;
 	text-align: center;
 	transform-origin: left top;
+	-webkit-touch-callout:none;
+	-webkit-user-select:none;
+	-khtml-user-select:none;
+	-moz-user-select:none;
+	-ms-user-select:none;
+	user-select:none;
 }
 
 .miniMap {
@@ -57,6 +69,12 @@
 		border-radius: 50%;
 		text-align: center;
 		transform: translateX(-50%) translateY(-50%);
+		-webkit-touch-callout:none;
+		-webkit-user-select:none;
+		-khtml-user-select:none;
+		-moz-user-select:none;
+		-ms-user-select:none;
+		user-select:none;
 	}
 
 	/* 可视范围 */
@@ -68,6 +86,12 @@
 		position: absolute;
 		text-align: center;
 		transform-origin: left top;
+		-webkit-touch-callout:none;
+		-webkit-user-select:none;
+		-khtml-user-select:none;
+		-moz-user-select:none;
+		-ms-user-select:none;
+		user-select:none;
 	}
 
 	.miniMap {
