--- a/src/views/tools/style/element-reset.scss
+++ b/src/views/tools/style/element-reset.scss
@@ -2,50 +2,53 @@
   background: transparent;
   border: none;
 }
-.el-cascader-menu {
-  width: fit-content;
-  min-width: 0 !important;
-  height: fit-content;
-  color: #ffffff;
-  background: #656565;
-  border: 1px solid #E4E7ED;
-  border-radius: 5px;
-}
-.el-cascader-menu__wrap {
-  height: fit-content;
-}
+// .el-cascader-menu {
+//   width: fit-content;
+//   min-width: 0 !important;
+//   height: fit-content;
+//   color: #ffffff;
+//   background: #656565;
+//   border: 1px solid #e4e7ed;
+//   border-radius: 5px;
+// }
+// .el-cascader-menu__wrap {
+//   height: fit-content;
+// }
 .el-cascader-node:hover {
   background: transparent;
-  color: #409EFF;
+  color: #409eff;
 }
-.el-form-item{
+.el-form-item {
   margin-bottom: 15px;
 }
 /* 分割线 */
 .el-divider--horizontal {
-    display: block;
-    height: 1px;
-    width: 100%;
-    margin: 2px 0;
+  display: block;
+  height: 1px;
+  width: 100%;
+  margin: 2px 0;
 }
 
 .el-collapse-item__wrap {
   border-top: 1px solid rgb(200, 200, 200, 0.5);
 }
 
-.el-scrollbar__wrap{
-  width: 100%;
-  height: 100%;
-  overflow-x: hidden;
-  overflow-y: scroll;
-}
+// .el-scrollbar__wrap {
+//   width: 100%;
+//   height: 100%;
+//   overflow-x: hidden;
+//   overflow-y: scroll;
+// }
 .el-scrollbar__wrap::-webkit-scrollbar {
   width: 0;
 }
-.el-tree--highlight-current .el-tree-node.is-current>.el-tree-node__content {
-  background-color: rgba(102,177,255, .5) !important; 
+.el-tree--highlight-current .el-tree-node.is-current > .el-tree-node__content {
+  background-color: rgba(102, 177, 255, 0.5) !important;
 }
-.PCView-page-container{
+.PCView-page-container {
+  .el-dialog__body {
+    padding: 5px 20px;
+  }
   /* 折叠框 */
   .el-collapse-item__header {
     height: 38px;
@@ -53,9 +56,9 @@
     font-weight: 800;
     background-color: rgb(71, 71, 71, 0.03);
   }
-  .el-menu{
+  .el-menu {
     padding: 5px 0;
-    .el-menu-item{
+    .el-menu-item {
       height: 30px;
       line-height: 30px;
     }
@@ -66,9 +69,9 @@
   .el-input--mini .el-input__inner {
     padding: 0 5px;
   }
-  
-  .colorForm{
-    .el-form-item__content{
+
+  .colorForm {
+    .el-form-item__content {
       height: 40px;
       display: flex;
       align-items: center;
@@ -77,22 +80,24 @@
   .el-slider__runway.show-input {
     margin-right: 80px;
     margin-left: 10px;
-
   }
   .el-slider__input {
     width: 60px;
   }
-  .imgForm{
+  .imgForm {
     .el-input-number--mini {
       width: 100%;
     }
   }
-  .el-date-table td span{
+  .el-date-table td span {
     text-align: center;
   }
 }
 
-.MobileView-page-container{
+.MobileView-page-container {
+  .el-dialog__body {
+    padding: 5px 20px;
+  }
   /* 折叠框 */
   .el-collapse-item__header {
     height: 38px;
@@ -100,9 +105,9 @@
     font-weight: 800;
     background-color: rgb(71, 71, 71, 0.03);
   }
-  .el-menu{
+  .el-menu {
     padding: 5px 0;
-    .el-menu-item{
+    .el-menu-item {
       height: 30px;
       line-height: 30px;
     }
